[project]
name = "ev-predictive-maintenance"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.13",
    "boto3-stubs==1.39.14",
    "fastapi==0.116.1",
    "ipykernel==6.30.0",
    "jupyterlab==4.4.5",
    "mlflow==3.1.4",
    "notebook==7.4.4",
    "pandas==2.3.1",
    "scipy==1.16.0",
    "torch==2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
